# gym_calculation

./: .gitignore  README.md  pyproject.toml  requirements.txt  style.css
gym_calculation/: app.py  app2.py  console.py  create_schedule.py  exercises_prehab.json  gym_schedule.py  one_rep_max.py  rpe_calculator.py  weight_calc.py
gym_calculation/params/: style.css  weight_manager.json
old/gym_calculation/: .gitignore  README.md  __about__.py  app.py  create_schedule.py  gym_schedule.py
old/gym_calculation/params/: exercises_acc.json  weight_manager.json
